--- a/config.json
+++ b/config.json
@@ -27,6 +27,11 @@
             "default": ""
           }
         }
+      },
+      "uiSchema": {
+        "done": {
+          "widget": "radio"
+        }
       }
     }
   }
